--- a/L12/L12.tex
+++ b/L12/L12.tex
@@ -160,7 +160,7 @@ Now assume $R$ is an integral domain and recall some facts we've already proven 
 The idea here behind this theorem and proof being that in regular Euclidean domains adding or subtracting alters the value of a norm while in polynomial rings, which has norm as the degree of the polynomial, it doesn't. This can be seen by considering that in the integers, if you start with $8$ and subtract off $1$, the norm is now $7$, but in the polynomial ring if you start with a polynomial of degree $8$ and subtract off a polynomial of strictly less degree (possibly even the same degree) then the norm (degree) does not change.
 \begin{crl}
 	Suppose $F,K$ are fields with $F\subset K$ and $a(X),b(X)\in F[X]$. \\
-	Then the quotient and remainder polynomials of $a$ by $b$ are independent of of field.
+	Then the quotient and remainder polynomials of $a$ by $b$ are independent of field.
 \end{crl}
 \begin{proof}
 	There exist $q(X),r(X)\in F[X]$ and $Q(X), R(X)\in K[X]$ with $\deg r< \deg b$ and $\deg R< \deg b$, such that
