--- a/L14/L14.tex
+++ b/L14/L14.tex
@@ -111,7 +111,7 @@ The goal of this lecture is to factor (or check for factors) of polynomials
 	Suppose $p(X)$, a non-constant monic polynomial, is reducible in $R[X]$, say
 	\[p(X)=a(X)\rdot b(X),\quad \deg a, \deg b< \deg p\]
 	In particular, because $p$ is monic then can also choose $a,b$ to be non-constant, monic polynomials, hence
-	\[\obar{p(X)} = \obar{a(X)}\rdot \obar{b(X)} \in (R/I)[X]\qedhere\]
+	\[\obar{p(X)} = \obar{a(X)}\rdot \obar{b(X)} \in (R/I)[X]\]
 	The reduction of $p$ in $R[X]$ leads to a reduction of $\obar{p}$ in $(R/I)[X]$. Hence, the contrapositive, if $\obar{p}$ is irreducible in $(R/I)[X]$ then $p$ is irreducible in $R[X]$, is also true.
 \end{proof}
 \begin{example}~
