--- a/L14/L14.tex
+++ b/L14/L14.tex
@@ -38,7 +38,7 @@ The goal of this lecture is to factor (or check for factors) of polynomials
 \begin{prop}[title= Rational Root Theorem,label=rational]
 	Let 
 	\[p(X)=a_0+a_1X+a_2X^2+\dots+a_nX^n\in \Z[X]\]
-	If $\frac{r}{s}\in \Q$ is in lowest terms (i.e $\gcd(r,s)=1$) and $p\left(\frac{r}{s}\right)=0$, then $\divs{r}{a_0}$ and $\divs{s}{a_1}$.\\
+	If $\frac{r}{s}\in \Q$ is in lowest terms (i.e $\gcd(r,s)=1$) and $p\left(\frac{r}{s}\right)=0$, then $\divs{r}{a_0}$ and $\divs{s}{a_n}$.\\
 	In particular, if $a_n=1$ (i.e $p$ is monic) and $p(d)\ne 0$ for all $d \in \Z$ such that $\divs{d}{a_0}$, then $p(X)$ has no roots in $\Q$.
 \end{prop}
 \begin{example}
